frontend connect to backend

--- a/Frontend/moz-todo-react/src/App.css
+++ b/Frontend/moz-todo-react/src/App.css
@@ -4,6 +4,14 @@
   contain: content;
 }
 
+.navbar {
+  border: 1px solid black;
+}
+
+.img-box {
+  border: 2px solid red;
+}
+
 .column {
   padding: 0;
 }
