--- a/Frontend/moz-todo-react/src/App.css
+++ b/Frontend/moz-todo-react/src/App.css
@@ -38,8 +38,24 @@ button {
   }
 }
 
+.right-container{
+  position: relative;
+}
+
+.loading {
+  position: absolute;
+  z-index: 1;
+  box-shadow: 0px 0px 1px 1px #0000001a;
+  font-weight: bold;
+  color: blue;
+  right: 50%;
+  left: 45%;
+  top: 50%;
+  bottom: 50%;
+}
 
 .imgDiv{
+  position: relative;
   margin-top: 1rem;
 }
 
