--- a/Frontend/moz-todo-react/src/App.css
+++ b/Frontend/moz-todo-react/src/App.css
@@ -44,10 +44,11 @@ button {
 
 .loading {
   position: absolute;
-  z-index: 1;
-  box-shadow: 0px 0px 1px 1px #0000001a;
+  z-index: 3;
+  display: ruby;
   font-weight: bold;
-  color: blue;
+  color: whitesmoke;
+  text-shadow: 2px 2px 5px red;
   right: 50%;
   left: 45%;
   top: 50%;
@@ -63,6 +64,8 @@ img{
   height: 100%;
   width: 100%;
   position: relative;
+  background-image: url('src/assets/backgroundImg.png');
+  background-size: cover;
 }
 
 footer {
